input/css/breeze: Fix visibility of combobox indicator
Indicator is default hidden, we should make sure to show it.

--- a/src/input/css/styles/breeze/button.css
+++ b/src/input/css/styles/breeze/button.css
@@ -214,6 +214,7 @@ combobox
         height: var(--icon-size-small);
         icon-name: "arrow-down-symbolic";
         icon-color: var(--button-active-text-color);
+        visibility: visible;
     }
 
     &.editable,
